--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <input required type="text" name="LoanAmmount" id="uiLoanAmmount" class="area" class="floatLabel" placeholder=" enter ammount in rupees ">
         </h2>
         <h2>Enter Loan ammount term
-        <input required type="text" name="LoanAmmountTerm" id="uiLaterm" class="area" class="floatLabel" placeholder=" enter ammount in rupees ">
+        <input required type="text" name="LoanAmmountTerm" id="uiLaterm" class="area" class="floatLabel" placeholder=" enter number of months ">
         </h2>
         <h2>Enter Applicant's income
         <input required type="text" name="appincome" id="uiAppIncome" class="area" class="floatLabel" placeholder=" enter ammount in rupees ">
@@ -58,13 +58,13 @@
         </h3>
         
 
-        <h2>Mention Credit History (1:has all debts paid/0:not paid)</h2>
+        <h2>Mention Credit History</h2>
         <h3>
             <div class="switch_field">
                 <input type="radio" name="uiCred" id="radio_credzero" value="0" required>
-                <label for="radio_credzero">[0]</label>
+                <label for="radio_credzero">All previous debts not paid</label>
                 <input type="radio" name="uiCred" id="radio_credone" value="1">
-                <label for="radio_credone">[1]</label>
+                <label for="radio_credone">All previous debts paid</label>
             </div>
         </h3>
         
